RSRVR-2 Vert.x 5 (#43)
* RSRVR-2 Vert.x 5 WIP

* Use RoutingContext rather than io.vertx.ext.web.validation.ValidationHandler
* Vert.x 5.0.3
* Using log4j2.properties
* Using ReservoirLauncher
* SRU, OAI and upload as separate OpenAPI specs
Because these has non JSON content in either request or response
and Vert.x OpenAPI does not support it.
* No need to strip log4j2.properties and log4j2-json.properties
As neither folio-vertx-lib, nor okapi-common includes them.
* Remove unimplemented OpenAPI specs and unused schemas
* Point to all local OpenAPI spec files
* Link to each separate api doc

* Harmonize the API descriptions

* Pass -sun-misc-unsafe-memory-access=allow example invocation

* Place junit dep in same spot as in master

* Remove log4j2.xml

* Revert openapi version change (mistake?)

---------

Co-authored-by: David Crossley <david@indexdata.com>
Co-authored-by: Jakub Skoczen <jakub@indexdata.com>